# cloudRust

./: .gitignore  docker-compose.yml
backend/: .env  Cargo.toml
backend/migrations/: 20250920122315_create_users.sql  20250920164541_create_files.sql  20250920164548_create_file_permissions.sql  20250920164654_creat_updated_at_trigger.sql
backend/migrations/2025-09-26-222314-0000_create_users/: down.sql  up.sql
backend/migrations/2025-09-26-222548-0000_create_files/: down.sql  up.sql
backend/migrations/2025-09-26-223238-0000_access_tokens/: down.sql  up.sql
backend/migrations/2025-09-26-223407-0000_create_updated_at_triggers/: down.sql  up.sql
backend/migrations/2025-10-02-094053-0000_create_wrapped_keys/: down.sql  up.sql
backend/migrations/2025-10-02-094137-0000_create_updated_at_triggers/: down.sql  up.sql
backend/src/: access_token.rs  auth.rs  file.rs  main.rs  models.rs  schema.rs  upload.rs  user.rs
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  api.ts  cryptoUtils.ts  main.ts
frontend/src/components/: FilesView.vue  Upload.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts
frontend/src/types/: api.ts
frontend/src/views/: HomeView.vue  LoginView.vue
