[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["multipart", "ws"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.2", features = ["postgres", "r2d2", "chrono"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
rand = "0.9.2"
r2d2 = "0.8.10"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
time = "0.3.44"
tokio = { version = "1.47.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4"] }
